--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "webpack": "^3.0.0"
   },
   "dependencies": {
-    "axios": "0.15.3"
+    "axios": "0.15.3",
+    "querystring": "^0.2.0"
   },
   "name": "@byte-code/lm-remote-api",
   "version": "0.0.42",
